--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "firebase": "^11.7.3",
     "postcss-nesting": "^13.0.1",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
